--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:    王贰
-SEOTitle: 王贰的博客 | BY Blog
+title:    Action speak louder than words
+SEOTitle: 王贰的博客 
 header-img: img/post-bg-desk.jpg
 email: 17691176276@163.com
 description: "Every failure is leading towards success."
