--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 王贰的博客
 header-img: img/post-bg-desk.jpg
 email: 17691176276@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 王贰的博客, qiubaiying, 王贰, java"
+keyword: "王贰的博客, 王贰, java"
 url: "http://wangdadi.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/wangdadi/wangdadi.github.io.git" # you code repository
