--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:    Action speak louder than words
+title:    To fight, to seek, to struggle, and not yield!
 SEOTitle: 王贰的博客 
 header-img: img/post-bg-desk.jpg
 email: 17691176276@163.com
